--- a/src/edu/unm/casaa/main/Report.fxml
+++ b/src/edu/unm/casaa/main/Report.fxml
@@ -9,33 +9,38 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.TextFlow?>
 
-<VBox stylesheets="@Main.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+<VBox style="-fx-background-color: transparent;" stylesheets="@Main.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
         <Menu mnemonicParsing="false" text="_Report">
           <items>
             <MenuItem mnemonicParsing="false" onAction="#printReport" text="Print" />
-            <MenuItem mnemonicParsing="false" text="Close" />
           </items>
         </Menu>
       </menus>
     </MenuBar>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
+    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" style="-fx-background-color: transparent;" VBox.vgrow="ALWAYS">
          <children>
-            <ScrollPane fx:id="pnReport" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <ScrollPane fx:id="pnReport" style="-fx-background-color: transparent;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0">
+                <AnchorPane minHeight="0.0" minWidth="0.0" style="-fx-background-color: transparent;">
                      <children>
-                        <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <VBox style="-fx-background-color: transparent;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
                               <AnchorPane>
                                  <children>
-                                    <Label alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="371.0" layoutY="-9.0" styleClass="lbl-report-section" text="Therapist Feedback" />
+                                    <HBox layoutX="371.0" layoutY="-9.0" spacing="10.0" AnchorPane.leftAnchor="0.0">
+                                       <children>
+                                          <Label alignment="TOP_LEFT" contentDisplay="CENTER" styleClass="lbl-report-section" text="Therapist Feedback:" />
+                                          <Label fx:id="lblSessionID" styleClass="lbl-report-section" />
+                                       </children>
+                                    </HBox>
                                  </children>
                               </AnchorPane>
                               <Label layoutX="20.0" layoutY="20.0" styleClass="lbl-report-section" text="Global Ratings" />
@@ -44,7 +49,7 @@
                                     <Insets bottom="20.0" />
                                  </padding>
                               </TextFlow>
-                              <GridPane hgap="12.0" prefHeight="574.0" prefWidth="898.0" vgap="12.0">
+                              <GridPane hgap="12.0" prefHeight="574.0" prefWidth="898.0" style="-fx-background-color: transparent;" vgap="12.0">
                                 <columnConstraints>
                                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -108,7 +113,6 @@
                                         <RowConstraints minHeight="10.0" prefHeight="30.0" />
                                         <RowConstraints minHeight="10.0" prefHeight="30.0" />
                                         <RowConstraints minHeight="10.0" prefHeight="30.0" />
-                                          <RowConstraints minHeight="10.0" prefHeight="30.0" />
                                           <RowConstraints minHeight="10.0" prefHeight="30.0" />
                                           <RowConstraints minHeight="10.0" prefHeight="30.0" />
                                           <RowConstraints minHeight="10.0" prefHeight="30.0" />
@@ -452,7 +456,7 @@
                         </VBox>
                      </children>
                      <padding>
-                        <Insets top="12.0" />
+                        <Insets bottom="12.0" left="12.0" right="12.0" top="12.0" />
                      </padding>
                   </AnchorPane>
               </content>
