--- a/src/edu/unm/casaa/main/UtteranceEditor.fxml
+++ b/src/edu/unm/casaa/main/UtteranceEditor.fxml
@@ -7,28 +7,24 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.VBox?>
 
-<DialogPane fx:id="dlgEditor" expanded="true" styleClass="modal-dialog-glass" stylesheets="@Main.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unm.casaa.main.MainController">
+<DialogPane fx:id="dlgEditor" expanded="true" prefWidth="240.0" styleClass="modal-dialog-glass" stylesheets="@Main.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unm.casaa.main.MainController">
    <content>
       <VBox fx:id="dlgVbox" styleClass="modal-dialog-content">
          <children>
-            <Label fx:id="dlgLblAnnotation" text="Annotation:">
-               <padding>
-                  <Insets bottom="4.0" />
-               </padding>
-            </Label>
-            <TextArea fx:id="dlgAnnotation" prefHeight="120.0" prefWidth="200.0" />
+            <Label fx:id="dlgLblAnnotation" text="Annotation:" />
+            <TextArea fx:id="dlgAnnotation" prefHeight="70.0" prefWidth="304.0" />
             <Label fx:id="dlgLblRatings" text="Associated Global Ratings:">
                <padding>
-                  <Insets bottom="4.0" top="8.0" />
+                  <Insets top="8.0" />
                </padding>
             </Label>
          </children>
       </VBox>
    </content>
    <header>
-      <Label text="Edit utterance annotation and associate with Global Ratings.">
+      <Label text="Edit utterance annotation and associate with Global Ratings." wrapText="true">
          <padding>
-            <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+            <Insets left="8.0" right="8.0" top="8.0" />
          </padding>
       </Label>
    </header>
@@ -37,6 +33,6 @@
       <ButtonType fx:constant="CANCEL" />
    </buttonTypes>
    <padding>
-      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+      <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
    </padding>
 </DialogPane>
