--- a/src/edu/unm/casaa/main/Export.fxml
+++ b/src/edu/unm/casaa/main/Export.fxml
@@ -8,14 +8,14 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.VBox?>
 
-<DialogPane prefHeight="264.0" prefWidth="517.0" stylesheets="@Main.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unm.casaa.main.ExportController">
+<DialogPane prefHeight="264.0" prefWidth="600.0" stylesheets="@Main.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unm.casaa.main.ExportController">
    <content>
       <VBox>
          <children>
-            <Label prefHeight="122.0" prefWidth="397.0" text="Drag CASAA files or folders containing CASAA files to export their contents to the destination directory." wrapText="true" />
+            <Label prefHeight="120.0" text="Drag CASAA files or folders containing CASAA files to export their contents to the destination directory." wrapText="true" />
             <Label text="Successfully converted:">
                <padding>
-                  <Insets bottom="2.0" top="2.0" />
+                  <Insets bottom="2.0" top="4.0" />
                </padding></Label>
             <ListView fx:id="dstListView" onDragDropped="#srcDragDropped" onDragExited="#srcDragExited" onDragOver="#srcDragOver" prefHeight="180.0" prefWidth="417.0" />
          </children>
@@ -25,7 +25,7 @@
       <ButtonType fx:constant="CLOSE" />
    </buttonTypes>
    <header>
-      <Label fx:id="dstFilePathName" onDragDropped="#dstDragDropped" onDragExited="#dstDragExited" onDragOver="#dstDragOver" prefHeight="40.0" text="[Drag Destination Directory Here]" textFill="#d50b0b">
+      <Label fx:id="dstFilePathName" onDragDropped="#dstDragDropped" onDragExited="#dstDragExited" onDragOver="#dstDragOver" prefHeight="40.0" text="[Drag destination directory here or click &quot;Output Destination&quot; button]" textFill="#d50b0b">
          <padding>
             <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
          </padding>
