Code cleanup. Improve Export window.

--- a/src/edu/unm/casaa/main/About.fxml
+++ b/src/edu/unm/casaa/main/About.fxml
@@ -23,7 +23,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@Main.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@Main.css"  xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
    <children>
       <ImageView id="imgvwSplash" fx:id="imgvwSplash" fitHeight="600.0" fitWidth="800.0" pickOnBounds="true" preserveRatio="true" styleClass="img-about-bg" />
       <HBox alignment="BOTTOM_LEFT" />
