--- a/src/edu/unm/casaa/main/GLOBAL_CODING.fxml
+++ b/src/edu/unm/casaa/main/GLOBAL_CODING.fxml
@@ -27,7 +27,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="GLOBAL_CODING" styleClass="controlsWin" stylesheets="@Main.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="GLOBAL_CODING" styleClass="controlsWin" stylesheets="@Main.css" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
    <children>
       <TitledPane animated="false" collapsible="false" text="Global Ratings" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <content>
