--- a/src/edu/unm/casaa/main/Main.css
+++ b/src/edu/unm/casaa/main/Main.css
@@ -31,6 +31,12 @@
     -fx-font-size: 12;
 }
 
+
+/* for button bar buttons */
+.btn-player {
+    -fx-background-color: transparent;
+}
+
 /* for button bar images */
 .img-btn-play {
     -fx-image: url("/media/btn_play.png");
